--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ textarea {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 30px;
   width: 50%;
 }
 
@@ -282,17 +282,16 @@ textarea {
 .text-overlay {
   position: absolute;
   top: 50%;
-  left: 300%;
-  transform: translate(-50%, -50%); /* Centers the text */
+  left: 177%;
+  transform: translate(-50%, -50%);
   color: white;
   text-align: center;
-  /*background-color: rgba(0, 0, 0, 0.5); !* Adds a semi-transparent background *!*/
   padding: 10px 20px;
   border-radius: 8px;
   direction: rtl;
   text-align: right;
-  width: 100%;
+  width: 112%;
   float: right;
   color: red;
-  font-size: 150%;
+  font-size: 193%;
 }
